Fixed Java version issues.